# anura

./: CMakeLists.txt  newFileLocalBranch1.txt  newFileLocalBranch2.txt  newFileLocalBranch3.txt
FastEMD/: EMD_DEFS.hpp  emd_hat_impl.hpp  emd_hat_signatures_interface.hpp
HARDILib/: CMakeLists.txt
HARDILib/include/: CSDeconv.h  ConfigManager.h  DBF.h  DWMRISimulator.h  GDTI.h  MultiTensor.h  MultiTensorField.h  SHEvaluator.h  SphericalFunction.h  SphericalHarmonics.h  Tensor.h  TensorCloud.h  dtisynthetic.h  dtiutils.h  gsl_prototypes.h  histogram.h  hornalign.h  icp.h  mrtrixio.h
HARDILib/src/: CSDeconv.cpp  ConfigManager.cpp  DBF.cpp  DWMRISimulator.cpp  GDTI.cpp  MultiTensor.cpp  MultiTensorField.cpp  SHEvaluator.cpp  SphericalHarmonics.cpp  Tensor.cpp  TensorCloud.cpp  dtisynthetic.cpp  dtiutils.cpp  histogram.cpp  hornalign.cpp  hungarian.cpp  icp.cpp  mrtrixio.cpp
MultiTensorFieldExplorer/: CMakeLists.txt  multitensorfieldexplorer.qrc  multitensorfieldexplorer.ui
MultiTensorFieldExplorer/include/: MultiTensorFieldExperimentParameters.h
MultiTensorFieldExplorer/include/qt/: glviewer.h  multitensorfieldexplorer.h  rgbtriplet.h
MultiTensorFieldExplorer/src/: MultiTensorFieldExperimentParameters.cpp  dbfExplore.cpp
MultiTensorFieldExplorer/src/qt/: glviewer.cpp  multitensorfieldexplorer.cpp  rgbtriplet.cpp
NNLibrary/: CMakeLists.txt
NNLibrary/include/: DirectoryListing.h  bits.h  classification.h  clustering.h  expm.h  geometryutils.h  hungarian.h  lars.h  linearalgebra.h  ls.h  macros.h  nnls.h  nnsls.h  nnsls_pgs.h  nnsls_pgs2.h  statisticsutils.h  utilities.h
NNLibrary/src/: DirectoryListing.cpp  bits.cpp  classification.cpp  clustering.cpp  expm.cpp  geometryutils.cpp  lars.cpp  linearalgebra.cpp  ls.cpp  nnls.cpp  nnsls.cpp  nnsls_pgs.cpp  nnsls_pgs2.cpp  statisticsutils.cpp  utilities.cpp
dimreductionlib/: CMakeLists.txt
dimreductionlib/include/: mds.h
dimreductionlib/src/: mds.cpp
imageiolib/: CMakeLists.txt
imageiolib/include/: image_io.h  volume_io.h
imageiolib/src/: image_io.cpp  volume_io.cpp
niftilib/: CMakeLists.txt
optimizationlib/: CMakeLists.txt
optimizationlib/include/: bfgs.h
optimizationlib/src/: bfgs.cpp
procimlib/: CMakeLists.txt
procimlib/include/: TotalVariation.h  denoising.h  derivatives.h  eckqmmf.h  ecqmmf.h  morphological.h  topological.h
procimlib/src/: TotalVariation.cpp  denoising.cpp  derivatives.cpp  eckqmmf.cpp  ecqmmf.cpp  morphological.cpp  topological.cpp
sparselib/: CMakeLists.txt
sparselib/include/: SparseMatrix.h  carpack.h
sparselib/src/: SparseMatrix.cpp  carpack.cpp
timelib/: CMakeLists.txt
timelib/include/: tictoc.h
timelib/src/: tictoc.cpp
zlib/: CMakeLists.txt
znzlib/: znzlib.h
